# Neuton_ai

application/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf
application/boards/: thingy91x_nrf9151_ns.conf  thingy91x_nrf9151_ns.overlay
application/modules/button/: CMakeLists.txt  Kconfig.button  button.c  button.h
application/modules/detection/: CMakeLists.txt  Kconfig.detection  detection.c  detection.h
application/modules/sampling/: CMakeLists.txt  Kconfig.sampling  sampling.c  sampling.h
application/src/: main.c
